css/style.css
/* ... */
.hist_parent {
    margin: 0 20px 0 20px;
    position: relative;
}

.bar_center_container {
    height: 65%;
    width: 100%;
}

.line_chart_overlay {
    margin: 75px calc(30px - var(--axis-width) / 2) 25px calc(55px + var(--axis-width) / 2);
    /*overflow: hidden;*/
}

#line_chart_event {
    margin: 0 calc(30px - var(--axis-width)) 25px calc(55px + var(--axis-width) / 2);
    overflow: hidden;
    overflow: hidden;
}

#line_chart_graph {

}

#date_slider {
    -webkit-appearance: none; /* Override default CSS styles */
    appearance: none;
    width: 100%; /* Full-width */
    /*height: 100%; !* Specified height *!*/
    background: none; /* Grey background */
    outline: none; /* Remove outline */
    opacity: 0.5; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
}

.slider_thumb {
    margin: 0;
}

.slider_thumb::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: var(--slider-thumb-width);
    cursor: ew-resize;
    border: none;
    box-shadow: -2000px 0 0 2000px var(--burgundy-light);
    background: repeating-linear-gradient(
            0deg,
            #7e0010,
            #7e0010 6px,
            transparent 6px,
            transparent 12px
    )
}

.slider_thumb::-moz-range-thumb {
    width: var(--slider-thumb-width);
    /*background: #7e0010;*/
    cursor: ew-resize;
    margin: 0;
    border: none;
    background: repeating-linear-gradient(
            0deg,
            #7e0010,
            #7e0010 6px,
            transparent 6px,
            transparent 12px
    )
}

.slider_thumb::-moz-range-progress {
    background-color: var(--burgundy-light);
}

#line_chart_slider {
    position: relative;
}

#onerighttop1, #onerighttop2 {
    /*background-color: coral;*/
    margin-bottom: 2.5vw;
}

#onerightmiddle {
    /*background-color: aqua;*/
    /*border: solid var(--burgundy) 1px;*/
    margin-bottom: 3vw;
    /*overflow-y: hidden;*/
}

#onerightbottom {
    overflow-y: hidden;
    position: relative;
}

.bar_title {
    margin-top: 0.5vw;
    /*margin-bottom: 2vw;*/
    font-size: 14px;
    color: var(--burgundy);
    text-align: center;
}

.gender {
    /*margin-bottom: 2vw;*/
    /*position: relative;*/
    font-size: 12px;
    color: var(--burgundy);
    text-align: center;
}

.gender_text {
    margin: 0 9px 0 9px;
}

#onerightbottom {
    /*background-color: darkorchid;*/
    /*border: solid var(--burgundy) 1px;*/
}

.center_parent {
    position: relative;
}

.content_sec {
    height: 85vh;
    width: 45vw;
}

.content_credit {
    position: absolute;
    bottom: 10%;
    left: 50%;
    transform: translateX(-50%);
    font-weight: 300;
}

.center_box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.content_title {
    /*margin-top: 10px;*/
    margin-left: 40px;
    margin-bottom: 0.5vh;
    font-size: 3.8vh;
    font-weight: bold;
    color: var(--burgundy);
}

.content_subtitle {
    /*margin-top: 5px;*/
    margin-left: 40px;
    font-size: 2.3vh;
    font-weight: 100;
    color: var(--burgundy);
}

.content_titles {
    margin-bottom: 3vh;
}

.content_middle {
    margin-top: 6vh;
    margin-bottom: 6vh;
}

#fp-nav {
    right: 0 !important;
}

#fp-nav ul li {
    width: auto;
    height: 40px !important;
    margin: 8px 15px 8px 15px !important;
}

#fp-nav ul li a.active span,
#fp-nav ul li:hover a.active span {
    height: 40px !important;
    width: 4px !important;
    border-radius: 0 !important;
    margin: -20px 0 0 0 !important;
    background: var(--burgundy);
    border: solid var(--burgundy) 1px;
    opacity: 70%;
}

#fp-nav ul li a span {
    border-radius: 0 !important;
    height: 40px !important;
    width: 4px !important;
    margin: -20px 0 0 0 !important;
    background: none;
    border: solid var(--burgundy) 1px;
    opacity: 70%;
}

#fp-nav ul li .fp-tooltip {
    line-height: 42px;
    font-size: 16px;
    color: var(--burgundy);
    justify-content: center;
    /*background: #899779;*/
    top: 0;
}

#fp-nav ul li .fp-tooltip {
    right: 10px !important;
}

#play-button {
    /*margin: 5px 0 0 0;*/
    width: 14px;
    height: 14px;
    cursor: pointer;
    border: none;
    background: url('../images/air_inactive.png') center center / cover;
}

.line_buttons {
    margin: 0 0 calc(60px - var(--axis-width) + 1px) 0;
}

.line_button {
    margin: 5px 0 0 0;
    width: 30px;
    height: 30px;
    cursor: pointer;
    border: none;
}

.line_button:focus {
    outline: none;
    box-shadow: none;
}


#air_button {
    background: url('../images/air_inactive.png') center center / cover;
}

#air_button:hover, #air_button:disabled {
    background: url('../images/air_active.png') center center / cover;
}

#rail_button {
    background: url('../images/rail_inactive.png') center center / cover;
}

#rail_button:hover, #rail_button:disabled {
    background: url('../images/rail_active.png') center center / cover;
}

#road_button {
    background: url('../images/road_inactive.png') center center / cover;
}

#road_button:hover, #road_button:disabled {
    background: url('../images/road_active.png') center center / cover;
}

#water_button {
    background: url('../images/water_inactive.png') center center / cover;
}

#water_button:hover, #water_button:disabled {
    background: url('../images/water_active.png') center center / cover;
}

#import_button {
    background: url('../images/import_inactive.png') center center / cover;
}

#import_button:hover, #import_button:disabled {
    background: url('../images/import_active.png') center center / cover;
}

#export_button {
    background: url('../images/export_inactive.png') center center / cover;
}

#export_button:hover, #export_button:disabled {
    background: url('../images/export_active.png') center center / cover;
}
/* ... */

